<resources>
    <string name="app_name">movie-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_description">Hi! I am your navigator.\nPlease pick a nickname.</string>
    <string name="app_name_heading">Movie\nPlot</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Informasi</string>
    <string name="tab_text_2">Komentar</string>
    <string name="title_dummy">Sonic the Hedgedog</string>
    <string name="dummy_tagline">A Whole New Speed of Hero</string>
    <string name="imdb_label">IMDB ID:</string>
    <string name="vote_label">Vote:</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="comments">Comments</string>
    <string name="dummy_name">anggimaisa:</string>
</resources>