<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="title"
            type="String" />
        <variable
            name="imdb"
            type="String" />
        <variable
            name="vote"
            type="String" />
        <variable
            name="description"
            type="String" />
        <variable
            name="tagline"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_poster">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/title_dummy"
                    android:text="@{title}"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_tagline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/dummy_tagline"
                    android:text="@{tagline}"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/cardo_italic"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_imdb_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imdb_label"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toBottomOf="@id/tv_tagline"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_imdb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="7.9/10"
                    android:text="@{imdb}"
                    android:textSize="13sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toTopOf="@id/tv_imdb_label"
                    app:layout_constraintStart_toEndOf="@id/tv_imdb_label" />

                <TextView
                    android:id="@+id/tv_vote_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_label"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toBottomOf="@id/tv_imdb_label"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="7.9/10"
                    android:text="@{vote}"
                    android:textSize="13sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toTopOf="@id/tv_vote_label"
                    app:layout_constraintStart_toEndOf="@id/tv_vote_label" />

                <TextView
                    android:id="@+id/tv_desc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description:"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toBottomOf="@id/tv_vote_label"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/lorem_ipsum"
                    android:textSize="13sp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="16dp"
                    android:text="@{description}"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/tosca_darkest"
                    app:layout_constraintTop_toBottomOf="@id/tv_desc_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>
</layout>